# open_nuttx

./: .gitignore  AUTHORS  Android.bp  CMakeLists.txt  Kconfig  LICENSE  README.md  TODO
.github/: nxstyle.json
arch/: Kconfig  README.txt
audio/: Kconfig  Makefile  audio.c  pcm_decode.c
binfmt/: CMakeLists.txt  Kconfig  Makefile  binfmt_coredump.c  binfmt_dumpmodule.c  binfmt_execmodule.c  binfmt_loadmodule.c  binfmt_unloadmodule.c  builtin.c  elf.c  nxflat.c
boards/: Kconfig  boardctl.c
boards/xtensa/iss-hifi4/iss-hifi4/src/: CMakeLists.txt  Makefile  hifi4_appinit.c  hifi4_boot.c
boards/xtensa/iss-hifi4/iss-hifi4/src/etc/init.d/: rc.sysinit  rcS
cmake/: menuconfig.cmake  nuttx_add_aidl.cmake  nuttx_add_application.cmake  nuttx_add_library.cmake  nuttx_add_romfs.cmake  nuttx_allsyms.cmake  nuttx_call_apps_makefile.cmake  nuttx_generate_headers.cmake  nuttx_generate_outputs.cmake  nuttx_generate_sim_ld.cmake  nuttx_kconfig.cmake  nuttx_mkconfig.cmake  nuttx_multiple_link.cmake  nuttx_toolchain.cmake  savedefconfig.cmake
crypto/: CMakeLists.txt  Kconfig  Makefile  bn.c  cryptodev.c  cryptosoft.c  xform.c
drivers/: Kconfig  Makefile  drivers_initialize.c  platform.mk
fs/: Kconfig  Makefile  fs_heap.c  fs_heap.h  fs_initialize.c
graphics/: Makefile
include/: aio.h  assert.h  debug.h  dlfcn.h  dsp.h  dspb16.h  elf.h  elf32.h  elf64.h  execinfo.h  fcntl.h  fixedmath.h  grp.h  inttypes.h  limits.h  malloc.h  mqueue.h  obstack.h  pthread.h  pwd.h  sched.h  semaphore.h  signal.h  stdio.h  stdlib.h  string.h  strings.h  syslog.h  threads.h  time.h  unistd.h  (+1 more)
(+3653 files in other folders)
